<resources>
    <string name="app_name">SimpleSignUp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="website">Website</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="profile_creation_sub_title">Use the form below to submit your portfolio An email and password are required.</string>
    <string name="profile_creation_title">Profile Creation</string>
    <string name="confirmation_title">Hello, %s !</string>
    <string name="confirmation_sub_title">Your super-awesome portfolio has been successfully submitted! The details below will be public within your community!</string>
    <string name="sign_in">Sign in</string>
</resources>